# awsglue-sandbox

./: .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: etl.py  initdb.py
test/: conftest.py  test_etl.py  test_etl_rds.py
